# nccl-extensions

./: .clang-format  .clang-format-ignore  .gitmodules  CONTRIBUTING.md  LICENSE.txt  README.md
nccl_ep/: BENCH.md  CMakeLists.txt  Makefile  README.md  RELEASE.md  ThirdPartyNotices.txt  ep_bench.cu  ep_test.cu  ep_test.py  nccl_ep.cc  nccl_ep_env.cc  nccl_ep_env.h  nccl_ep_test_internal.h  quantization_recipe.hpp
nccl_ep/ci/: run_nccl_ep_ci_tests.sh  run_nccl_ep_unit_tests.sh
nccl_ep/device/: cuda_compat_shims.cuh  device_primitives.cuh  ht_ep.cuh  ht_ep_adapter.cu  ht_ep_adapter.cuh  ht_ep_configs.cuh  hybrid_ep.cuh  hybridep_adapter.cu  hybridep_adapter.cuh  hybridep_configs.cuh  ll_ep.cuh  ll_ep_adapter.cu  ll_ep_adapter.cuh  low_latency.cu  macros.cuh  scan_kernel.cuh
nccl_ep/device/jit/: combine_jit.cuh  dispatch_jit.cuh  ht_combine_jit.cuh  ht_dispatch_jit.cuh  jit_cache.cc  jit_runtime.cc  jit_runtime.hpp  jit_utils.cc  jit_utils.hpp  ll_clean_jit.cuh  ll_combine_jit.cuh  ll_dispatch_jit.cuh  nvcc_compiler.cc  preprocess_jit.cuh
nccl_ep/include/: common.hpp  ep_enums.h  nccl_ep.h
nccl_ep/python/nccl_ep/: nccl_wrapper.py
nccl_ep/tests/: Makefile  run_tests.sh  test_common.h  test_handle_maps.cu  test_ht_bwd.cu  test_ht_overflow_drop.cu  test_ht_stale_routing_map.cu  test_lifecycle.cu  test_output_layout.cu  test_quantization_recipe.cu  test_recv_topk_idx_flags.cu  test_tensor_create.cu  test_zero_copy.cu
nccl_m2n/: Makefile  Makefile.common  README.md
